kubernates-manifests/sandbox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox
  labels:
    app: sandbox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
        - name: sandbox
          image: sandbox:latest
          resources:
            limits:
              cpu: "0.1"
              memory: "200Mi"
            requests:
              cpu: "0.1"
              memory: "200Mi"
