kubernates-manifests/sandbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-deployment
spec:
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
      - name: sandbox
        image: bokey-play_sandbox
        volumeMounts:
          - mountPath: /app/projects
            name: projects-volume
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5006
      volumes:
        - name: projects-volume
          persistentVolumeClaim:
            claimName: projects-volume-rw-claim
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-service
spec:
  type: NodePort
  selector:
    app: sandbox
  ports:
  - port: 5006
    targetPort: 5006
